--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,12 @@
   "type": "module",
   "private": true,
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "tsc-watch": "^7.1.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -16,9 +20,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@graphql-tools/merge": "^9.0.24",
     "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0"
   }
 }
